--- a/templates/apps/info.html
+++ b/templates/apps/info.html
@@ -65,6 +65,14 @@
           </tr>
         </tbody>
     </table>
+    <div class='map'>
+        <div class='map_button'>
+            <a class="square_btn" target="_blank" href="http://maps.google.com/maps?z=20&amp;t=m&amp;hl=ja&amp;iwloc=A&amp;q=26.1943732,127.6639063&amp;ul=1"> 地図</a>
+        </div>
+        <div class='map_button'>
+            <a class="square_btn" target="_blank" href="http://maps.google.com/maps?z=20&amp;t=m&amp;hl=ja&amp;iwloc=A&amp;q=26.1943732,127.6639063&amp;ul=1"> 航空写真</a>
+        </div>
+    </div>
   </div>
   {% endfor %}
 </div>
