--- a/templates/company/company.html
+++ b/templates/company/company.html
@@ -20,7 +20,7 @@
           <tbody>
             <tr>
               <th>{{ field.label_tag }}</th>
-              <td>{{ field }}</br>{{ field.errors }}</td>
+              <td>{{ field }}{{ field.errors }}</td>
             </tr>
           </tbody>
         </table>
