--- a/templates/apps/base.html
+++ b/templates/apps/base.html
@@ -19,7 +19,11 @@
 
   <!-- ナビバー -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">roomii</a>
+    {% if user.is_authenticated %}
+      <a class="navbar-brand" href="#">roomii</a>
+    {% else %}
+      <a class="navbar-brand" href="{% url 'apps:top' %}">roomii</a>
+    {% endif %}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,13 +46,14 @@
             <a class="nav-item nav-link" href="{% url 'register:login' %}">
                ゲストログインはこちら
             </a>
-            <a class="nav-item nav-link" href="{% url 'register:customer_login' %}">
-               業者の方はこちら
-            </a>
+      
           </li>
           {% endif %}
         {% else %}
           {% if user.is_authenticated %}
+          <li>
+            <a class="nav-item nav-link btn_sidebar" data-action="toggle" data-side="left" href="javascript:void(0)">ダッシュボード</a>
+          </li>
           <li>
             <a class="nav-item nav-link" href="{% url 'register:top'%}">TOP</a>
           </li>
@@ -65,7 +70,7 @@
             <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">マイページ</a>
           </li>
           <li>
-            <a class="nav-item nav-link" href="#">メッセージBox</a>
+            <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">メッセージBox</a>
           </li>
           <li>
             <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
@@ -75,77 +80,164 @@
             <a class="nav-item nav-link" href="{% url 'register:login' %}">
                ゲストログインはこちら
             </a>
-            <a class="nav-item nav-link" href="{% url 'register:customer_login' %}">
-               業者の方はこちら
-            </a>
+            
           </li>
           {% endif %}
         {% endif %}
       </ul>
     </div>
   </nav>
+  {% if user.is_authenticated %}
+  <aside class="sidebar left">
+      <a href="javascript:void(0)" class='btn_sidebar' data-action="toggle" data-side="left">
+          <img src="{% static 'img/Untitled1.png' %}" alt="">
+        </a>
+    <h1 id="brand-logo">roomii</h1>
+    <nav id="global-nav">
+        <ul>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'register:top'%}">TOP</a></li>
+            {% if user.is_company %}
+            <li><a href="{% url 'apps:company_change' %}">業者情報編集</a></li>
+            {%else%}
+            {% endif %}
+            <li><a href="{% url 'apps:company' %}">物件登録</a></li>
+            <li><a href="{% url 'register:user_detail' user.pk %}">マイページ</a></li>
+            <li><a href="#">メッセージBOX</a></li>
+            <li><a href="{% url 'register:logout' %}">ログアウト</a></li>
+          {% else %}
+            <li><a href="{% url 'register:login' %}">ゲストログインはこちら</a></li>
+          {% endif %}
+        </ul>
+    </nav> 
+  </aside>
+  {% endif %}
 
   <!-- メインコンテント -->
   <div class="container mt-3">
     <div class='main_view'>
 
+      {% if user.is_authenticated %}
+      
       <header>
 
           <form method="get" action="" name='filter_name'>
-            {% csrf_token %}
+           
             <ul id='fade-in' class='dropmenu'>
             <li class='first'>
               <ul>
-                </li><a href="#">間取り</a> {%for tmp in room_list%}
-                <li><a href="#"><input type="checkbox" id="filter_kind_{{ tmp.id }}" name="room" value="{{ tmp.room_id }}">{{ tmp.room_id }}</a></li>
+                <a href="javascript:void(0)">間取り</a> 
+                {%for tmp in room_table%}
+                <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_{{ tmp.id }}" name="room" value="{{ tmp.room_id }}">{{ tmp.room_id }}</a></li>
                 {% endfor %}
               </ul>
             </li>
             <li class='middle'>
               <ul>
-                <a href="#">階数</a> {%for list in floor_list%}
-                <li><a href="#"><input type="checkbox" id="filter_kind_{{ list.id }}" name="floor" value="{{ list.floor_id }}">{{ list.floor_id }}</a></li>
+                <a href="javascript:void(0)">階数</a> 
+                {%for list in floor_table%}
+                <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_{{ list.id }}" name="floor" value="{{ list.floor_id }}">{{ list.floor_id }}</a></li>
                 {% endfor %}
               </ul>
             </li>
             <li class='last'>
               <ul>
-                <a href="#">空室状況</a>
-                {%for list in room_list%}
+                <a href="javascript:void(0)">空室状況</a>
+                {%for list in room_table%}
                   {% if list.room_live_id == '空室あり' %}
-                     <li><a href="#"><input type="checkbox" id="filter_kind_{{ list.id }}" name="live" value="0">{{ list.room_live_id }}</a></li>
+                     <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_{{ list.id }}" name="live" value="0">{{ list.room_live_id }}</a></li>
                   {% elif list.room_live_id == Nene %}
 
                   {% else %}
-                     <li><a href="#"><input type="checkbox" id="filter_kind_{{ list.id }}" name="live" value="1">{{ list.room_live_id }}</a></li>
+                     <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_{{ list.id }}" name="live" value="1">{{ list.room_live_id }}</a></li>
                   {% endif %}
                 {% endfor %}
               </ul>
             </li>
             <li class="price">
               <ul>
-                <a href="#">家賃</a>
-                <li><a href="#"><input type="checkbox" id="filter_kind_4" name="price" value="1">〜３万円</a></li>
+                <a href="javascript:void(0)">家賃</a>
+                <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_4" name="price" value="1">〜３万円</a></li>
 
-                <li><a href="#"><input type="checkbox" id="filter_kind_2" name="price" value="2">3万円〜5万円</a></li>
+                <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_2" name="price" value="2">3万円〜5万円</a></li>
 
-                <li><a href="#"><input type="checkbox" id="filter_kind_1" name="price" value="3" >5万円〜7万円</a></li>
+                <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_1" name="price" value="3" >5万円〜7万円</a></li>
 
-                <li><a href="#"><input type="checkbox" id="filter_kind_3" name="price" value="4">7万円〜</a></li>
+                <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_3" name="price" value="4">7万円〜</a></li>
 
               </ul>
             </li>
             <div class='name_box'>
-              <input id="sbox" id="search" name="name" type="text" placeholder="名称" />
+              <input id="sbox" name="name" type="text" placeholder="名称" />
             </div>
             <div class='address_box'>
-              <input id="sbox" id="search" name="article_address" type="text" placeholder="住所" />
+              <input id="search" name="article_address" type="text" placeholder="住所" />
               <input id="sbtn" type="submit" value="検索" />
             </div>
           </ul>
           </form>
 
       </header>
+      {% endif %}
+      {% if tmp_list %}
+      <header>
+        <form method="get" action="" name='filter_name'>
+          <ul id='fade-in' class='dropmenu'>
+          <li class='first'>
+            <ul>
+              <a href="javascript:void(0)">間取り</a> 
+              {%for tmp in room_table%}
+              <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_{{ tmp.id }}" name="room" value="{{ tmp.room_id }}">{{ tmp.room_id }}</a></li>
+              {% endfor %}
+            </ul>
+          </li>
+          <li class='middle'>
+            <ul>
+              <a href="javascript:void(0)">階数</a> 
+              {%for list in floor_table%}
+              <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_{{ list.id }}" name="floor" value="{{ list.floor_id }}">{{ list.floor_id }}</a></li>
+              {% endfor %}
+            </ul>
+          </li>
+          <li class='last'>
+            <ul>
+              <a href="javascript:void(0)">空室状況</a>
+              {%for list in room_table%}
+                {% if list.room_live_id == '空室あり' %}
+                   <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_{{ list.id }}" name="live" value="0">{{ list.room_live_id }}</a></li>
+                {% elif list.room_live_id == Nene %}
+
+                {% else %}
+                   <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_{{ list.id }}" name="live" value="1">{{ list.room_live_id }}</a></li>
+                {% endif %}
+              {% endfor %}
+            </ul>
+          </li>
+          <li class="price">
+            <ul>
+              <a href="javascript:void(0)">家賃</a>
+              <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_4" name="price" value="1">〜３万円</a></li>
+
+              <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_2" name="price" value="2">3万円〜5万円</a></li>
+
+              <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_1" name="price" value="3" >5万円〜7万円</a></li>
+
+              <li><a href="javascript:void(0)"><input type="checkbox" id="filter_kind_3" name="price" value="4">7万円〜</a></li>
+
+            </ul>
+          </li>
+          <div class='name_box'>
+            <input id="sbox" name="name" type="text" placeholder="名称" />
+          </div>
+          <div class='address_box'>
+            <input id="search" name="article_address" type="text" placeholder="住所" />
+            <input id="sbtn" type="submit" value="検索" />
+          </div>
+        </ul>
+        </form>
+
+      </header>
+      {% endif %}
       {% block content %}{% endblock %}
     </div>
   </div>
@@ -156,6 +248,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-sidebar/3.1.0/jquery.sidebar.min.js"></script>
   <script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
   {% block extrajs %}{% endblock %}
   <script src="{% static 'js/jquery.inview-master/jquery.inview.js' %}"></script>
