--- a/templates/register/base.html
+++ b/templates/register/base.html
@@ -18,7 +18,7 @@
 <body>
     <!-- ナビバー -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">roomii</a>
+      <a class="navbar-brand" href="{% url 'apps:top'%}">roomii</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,7 +33,7 @@
            <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">マイページ</a>
          </li>
          <li>
-           <a class="nav-item nav-link" href="#">メッセージBox</a>
+           <a class="nav-item nav-link" href="{% url 'register:user_detail' user.pk %}">メッセージBox</a>
          </li>
          <li>
            <a class="nav-item nav-link" href="{%url 'register:logout' %}">ログアウト</a>
